index now into FR (EN in index-en.html)

--- a/index-en.html
+++ b/index-en.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html lang="fr" class="lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="fr" class="lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="fr" class="lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="fr"> <!--<![endif]-->
+<!--[if lt IE 7]>      <html lang="en" class="lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html lang="en" class="lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html lang="en" class="lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Développeur Web, PHP Symfony 2, NodeJS, ReactJS, JavaScript</title>
-  <meta name="description" content="Web Développeur Web sur Paris (France), PHP Symfony 2, NodeJS, ReactJS, JavaScript">
-  <meta name="keywords" content="développeur web, développeur web full stack, développeur web php symfony 2, développeur web NodeJS, développeur web ReactJS, développeur web JavaScript">
+  <title>Web Developer, PHP Symfony 2, NodeJS, ReactJS, JavaScript</title>
+  <meta name="description" content="Web developer in France, Paris, PHP Symfony 2, NodeJS, ReactJS, JavaScript">
+  <meta name="keywords" content="web developer, web developer full stack, web developer php symfony 2, web developer NodeJS, web developer ReactJS, web developer JavaScript">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Add to homescreen for Chrome on Android -->
@@ -18,7 +18,7 @@
   <!-- Add to homescreen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Développeur Web, PHP Symfony 2, NodeJS, ReactJS, JavaScript">
+  <meta name="apple-mobile-web-app-title" content="Web Developer, PHP Symfony 2, NodeJS, ReactJS, JavaScript">
   <link rel="apple-touch-icon-precomposed" href="images/ios-desktop.png">
 
   <!-- Tile icon for Win8 (144x144 + tile color) -->
@@ -50,51 +50,50 @@
         <div class="mdl-layout-spacer"></div>
         <!-- Navigation. We hide it in small screens. -->
         <nav class="mdl-navigation mdl-layout--large-screen-only">
-          <a class="mdl-navigation__link" href="#resume">CV</a>
+          <a class="mdl-navigation__link" href="#resume">Resume</a>
           <a class="mdl-navigation__link" href="#contact">Contact</a>
-          <a class="mdl-navigation__link" href="index-en.html" lang="en">
-            <i class="material-icons md-light md-14">language</i> EN
+          <a class="mdl-navigation__link" href="index.html" lang="fr">
+            <i class="material-icons md-light md-14">language</i> FR
           </a>
         </nav>
       </div>
       <div class="mdl-layout__header-row">
-        <h1 class="mdl-layout-title">Développeur Web, PHP Symfony 2, NodeJS, ReactJS, JavaScript</h1>
+        <h1 class="mdl-layout-title">Web Developer, PHP Symfony 2, NodeJS, ReactJS, JavaScript</h1>
       </div>
     </header>
     <main class="mdl-layout__content">
       <div class="page-content">
         <!--[if lt IE 8]>
           <p class="browserupgrade">
-            Vous utilisez un navigateur <strong>obsolète</strong>.
-            Veuillez <a target="_blank" href="http://browsehappy.com/">mettre à jour votre navigateur</a>
-            pour améliorer votre expérience.
+            You are using an <strong>outdated</strong> browser.
+            Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
           </p>
         <![endif]-->
 
         <section id="resume" class="mdl-grid mdl-grid--no-spacing section--center">
           <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col">
             <div class="mdl-card__supporting-text">
-              <h4>CV</h4>
+              <h4>Resume</h4>
               <p class="mdl-typography--display-1"><i class="material-icons md-24 mdl-color-text--green">event_available</i>
-                &nbsp; Disponible à l'embauche.</span>
+                &nbsp; Available for hire.</span>
               </p>
               <!--
               <p class="mdl-typography--display-1"><i class="hidden material-icons mdl-color-text--red">event_busy</i>
-                &nbsp; Actuellement occupé, non disponible.</span>
+                &nbsp; Currently busy, not available.</span>
               </p>
               -->
-              <p>Allez sur mon
+              <p>See my
                 <a data-ga-label="View GitHub" href="https://github.com/sylvaindethier" target="_blank">
-                  <i class="fa fa-github"></i> profil GitHub
+                  <i class="fa fa-github"></i> GitHub profile
                 </a>.
               </p>
             </div>
             <div class="mdl-card__actions">
-              <a href="documents/CV-Sylvain-Dethier-2016.pdf" class="mdl-button mdl-color-text--blue">
+              <a href="documents/Resume-Sylvain-Dethier-2016.pdf" class="mdl-button mdl-color-text--blue">
                 <i class="material-icons md-14">file_download</i>
-                Téléchargez mon CV
+                Download my resume
                 <i class="material-icons md-14">picture_as_pdf</i>
-                (PDF dernière mise à jour en janvier 2016).
+                (PDF last updated in 2016 january).
               </a>
             </div>
           </div>
@@ -130,7 +129,7 @@
               <a data-ga-label="Write email action" href="mailto:dethiersylvain@gmail.com"
                 class="mdl-button mdl-color-text--blue">
                 <i class="material-icons md-14">mail</i>
-                Ou écrivez-moi.
+                Or email me.
               </a>
             </div>
           </div>
@@ -140,7 +139,7 @@
         <footer class="mdl-mini-footer">
           <div class="mdl-mini-footer__left-section">
             <div class="mdl-logo"><i class="material-icons md-14">copyright</i>
-              Sylvain Dethier. Propulsé avec <i class="fa fa-heart"></i> par:
+              Sylvain Dethier. Powered with <i class="fa fa-heart"></i> by:
             </div>
             <ul class="mdl-mini-footer__link-list">
               <li><a href="http://pages.github.com/">Github Pages <i class="fa fa-github"></i></a></li>
