--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <i class="material-icons md-14">file_download</i>
                 Téléchargez mon CV
                 <i class="material-icons md-14">picture_as_pdf</i>
-                (PDF dernière mise à jour en janvier 2016).
+                (PDF - 2016/02).
               </a>
             </div>
           </div>
