fix: update data

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Développeur Web, PHP Symfony 2, NodeJS, ReactJS, JavaScript</title>
-  <meta name="description" content="Web Développeur Web sur Paris (France), PHP Symfony 2, NodeJS, ReactJS, JavaScript">
-  <meta name="keywords" content="développeur web, développeur web full stack, développeur web php symfony 2, développeur web NodeJS, développeur web ReactJS, développeur web JavaScript">
+  <title>Développeur Web, NodeJS, JavaScript, ReactJS, PHP, Symfony</title>
+  <meta name="description" content="Développeur Web sur Paris (France), NodeJS, JavaScript, ReactJS, PHP, Symfony">
+  <meta name="keywords" content="développeur web, développeur web full stack, développeur web NodeJS, développeur web ReactJS, développeur web JavaScript, développeur web php symfony">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Add to homescreen for Chrome on Android -->
@@ -18,7 +18,7 @@
   <!-- Add to homescreen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Développeur Web, PHP Symfony 2, NodeJS, ReactJS, JavaScript">
+  <meta name="apple-mobile-web-app-title" content="Développeur Web, NodeJS, JavaScript, ReactJS, PHP, Symfony">
   <link rel="apple-touch-icon-precomposed" href="images/ios-desktop.png">
 
   <!-- Tile icon for Win8 (144x144 + tile color) -->
