add: last changes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </nav>
       </div>
       <div class="mdl-layout__header-row">
-        <h1 class="mdl-layout-title">Développeur Web, PHP Symfony 2, NodeJS, ReactJS, JavaScript</h1>
+        <h1 class="mdl-layout-title">Développeur Web, NodeJS, JavaScript, ReatcJS, PHP, Symfony</h1>
       </div>
     </header>
     <main class="mdl-layout__content">
