fix: prevent using the page from frames

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta http-equiv="X-Frame-Options" content="deny">
   <title>Développeur Web, NodeJS, JavaScript, ReactJS, PHP, Symfony</title>
   <meta name="description" content="Développeur Web sur Paris (France), NodeJS, JavaScript, ReactJS, PHP, Symfony">
   <meta name="keywords" content="développeur web, développeur web full stack, développeur web NodeJS, développeur web ReactJS, développeur web JavaScript, développeur web php symfony">
