--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,17 @@
-<!doctype html><%
+<!doctype html>
+<%
 
 var opts = Object.assign({}, htmlWebpackPlugin.options, {
-  lang: 'en',
-  title: 'React App',
-  description: '',
-  keywords: '',
+  lang: 'fr',
+  title: 'Sylvain Dethier - Web/App Développeur web',
+  description: 'Développeur web sur Paris (France), JavaScript, NodeJS, ReactJS, PHP, Symfony',
+  keywords: 'développeur, web, full stack, JavaScript, NodeJS, ReactJS, PHP, Symfony',
   rootString: 'Loading app ...',
 });
 var files = htmlWebpackPlugin.files;
 
-%><html lang="<%= opts.lang %>" <% if(files.manifest) { %>manifest="<%= files.manifest %>"<% } %>>
+%>
+<html lang="<%= opts.lang %>" <% if(files.manifest) { %> manifest="<%= files.manifest %>"<% } %>>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -17,7 +19,24 @@ var files = htmlWebpackPlugin.files;
     <meta name="description" content="<%= opts.description %>">
     <meta name="keywords" content="<%= opts.keywords %>">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-Frame-Options" content="deny">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="icon" sizes="192x192" href="icons/android-desktop.png">
+
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="<%= opts.description %>">
+    <link rel="apple-touch-icon-precomposed" href="icons/ios-desktop.png">
+
+    <!-- Tile icon for Win8 (144x144 + tile color) -->
+    <meta name="msapplication-TileImage" content="icons/ms-touch-icon-precomposed.png">
+    <meta name="msapplication-TileColor" content="#2196F3">
+
+    <link rel="shortcut icon" href="icons/favicon.png">
   </head>
   <body>
     <div id="root"><%= opts.rootString %></div>
