--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@ var opts = Object.assign({}, htmlWebpackPlugin.options, {
   title: 'Sylvain Dethier - Web/App Développeur web',
   description: 'Développeur web sur Paris (France), JavaScript, NodeJS, ReactJS, PHP, Symfony',
   keywords: 'développeur, web, full stack, JavaScript, NodeJS, ReactJS, PHP, Symfony',
-  rootString: 'Loading app ...',
 });
 var files = htmlWebpackPlugin.files;
 
@@ -37,8 +36,41 @@ var files = htmlWebpackPlugin.files;
     <meta name="msapplication-TileColor" content="#2196F3">
 
     <link rel="shortcut icon" href="icons/favicon.png">
+    <style>
+    /* spinner from http://tobiasahlin.com/spinkit/ */
+    .spinner {
+      width: 40px;
+      height: 40px;
+      background-color: #333;
+
+      margin: 100px auto;
+      -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
+      animation: sk-rotateplane 1.2s infinite ease-in-out;
+    }
+
+    @-webkit-keyframes sk-rotateplane {
+      0% { -webkit-transform: perspective(120px) }
+      50% { -webkit-transform: perspective(120px) rotateY(180deg) }
+      100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
+    }
+
+    @keyframes sk-rotateplane {
+      0% {
+        transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+        -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
+      } 50% {
+        transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+        -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
+      } 100% {
+        transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+        -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+      }
+    }
+    </style>
   </head>
   <body>
-    <div id="root"><%= opts.rootString %></div>
+    <div id="root">
+      <div class="spinner"></div>
+    </div>
   </body>
 </html>
