--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@ var files = htmlWebpackPlugin.files;
     <meta name="msapplication-TileColor" content="#2196F3">
 
     <link rel="shortcut icon" href="icons/favicon.png">
-    <style>
+    <style type="text/css">
     /* spinner from http://tobiasahlin.com/spinkit/ */
     .spinner {
       width: 40px;
@@ -67,6 +67,27 @@ var files = htmlWebpackPlugin.files;
       }
     }
     </style>
+    <script type="text/javascript">
+    /*! Single Page Apps for GitHub Pages
+     * https://github.com/rafrex/spa-github-pages
+     * Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
+     */
+    (function(l) {
+      if (!l.search) return;
+      var q = {};
+      l.search.slice(1).split('&').forEach(function(v) {
+        var a = v.split('=');
+        q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
+      });
+      if (q.p !== undefined) {
+        window.history.replaceState(null, null,
+          (q.p || '') +
+          (q.q ? ('?' + q.q) : '') +
+          l.hash
+        );
+      }
+    }(window.location));
+    </script>
   </head>
   <body>
     <div id="root">
