fix: stupid things

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,4 @@
-<!doctype html>
-<%
+<!doctype html><%
 
 var opts = Object.assign({}, htmlWebpackPlugin.options, {
   lang: 'fr',
@@ -36,7 +35,7 @@ var files = htmlWebpackPlugin.files;
 
     <link rel="shortcut icon" href="icons/favicon.png">
     <script type="text/javascript">
-    /*! Single Page Apps for GitHub Pages
+    /* Single Page Apps for GitHub Pages
      * https://github.com/rafrex/spa-github-pages
      * Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
      */
