--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!doctype html><%
 
 var opts = Object.assign({}, htmlWebpackPlugin.options, {
-  lang: 'fr',
+  lang: 'fr-FR',
   title: 'Sylvain Dethier - Web/App Développeur web',
-  description: 'Développeur web sur Paris (France), JavaScript, NodeJS, ReactJS, PHP, Symfony',
-  keywords: 'développeur, web, full stack, JavaScript, NodeJS, ReactJS, PHP, Symfony',
+  description: 'Développeur web sur Paris (France), JavaScript, NodeJS, ReactJS, PHP',
+  keywords: 'développeur, web, full stack, JavaScript, NodeJS, ReactJS, PHP',
 });
 var files = htmlWebpackPlugin.files;
 
@@ -55,43 +55,42 @@ var files = htmlWebpackPlugin.files;
       }
     }(window.location));
     </script>
+    <style type="text/css">
+    /* spinner from http://tobiasahlin.com/spinkit/ */
+    .spinner {
+      width: 100px;
+      height: 100px;
+      background-color: #333;
+      position: relative;
+
+      margin: 100px auto;
+      -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
+      animation: sk-rotateplane 1.2s infinite ease-in-out;
+    }
+
+    @-webkit-keyframes sk-rotateplane {
+      0% { -webkit-transform: perspective(120px) }
+      50% { -webkit-transform: perspective(120px) rotateY(180deg) }
+      100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
+    }
+
+    @keyframes sk-rotateplane {
+      0% {
+        transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+        -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
+      } 50% {
+        transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+        -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
+      } 100% {
+        transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+        -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+      }
+    }
+    </style>
   </head>
   <body>
     <div id="root">
-      <div class="spinner">
-      <style type="text/css">
-      /* spinner from http://tobiasahlin.com/spinkit/ */
-      .spinner {
-        width: 100px;
-        height: 100px;
-        background-color: #333;
-        position: relative;
-
-        margin: 100px auto;
-        -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
-        animation: sk-rotateplane 1.2s infinite ease-in-out;
-      }
-
-      @-webkit-keyframes sk-rotateplane {
-        0% { -webkit-transform: perspective(120px) }
-        50% { -webkit-transform: perspective(120px) rotateY(180deg) }
-        100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
-      }
-
-      @keyframes sk-rotateplane {
-        0% {
-          transform: perspective(120px) rotateX(0deg) rotateY(0deg);
-          -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
-        } 50% {
-          transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
-          -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
-        } 100% {
-          transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
-          -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
-        }
-      }
-      </style>
-      </div>
+      <div class="spinner"></div>
     </div>
   </body>
 </html>
