fix: doc date update

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="mdl-card__supporting-text">
               <h4>CV</h4>
               <p class="mdl-typography--display-1"><i class="material-icons md-24 mdl-color-text--green">event_available</i>
-                &nbsp; Disponible à l'embauche.</span>
+                &nbsp; Disponible</span>
               </p>
               <!--
               <p class="mdl-typography--display-1"><i class="hidden material-icons mdl-color-text--red">event_busy</i>
@@ -93,7 +93,7 @@
                 <i class="material-icons md-14">file_download</i>
                 Téléchargez mon CV
                 <i class="material-icons md-14">picture_as_pdf</i>
-                (PDF - 2016/03).
+                (PDF - 2016/09).
               </a>
             </div>
           </div>
