fix: better CV & Contact sections

--- a/index.html
+++ b/index.html
@@ -82,10 +82,25 @@
                 &nbsp; Actuellement occupé, non disponible.</span>
               </p>
               -->
-              <p>Allez sur mon
-                <a data-ga-label="View GitHub" href="https://github.com/sylvaindethier" target="_blank">
-                  <i class="fa fa-github"></i> profil GitHub
-                </a>.
+              <p>Voir mon CV sur
+                <a data-ga-label="View LinkedIn" target="_blank" href="https://linkedin.com/in/sylvaindethier"
+                  class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+                  <i class="fa fa-linkedin md-14"></i>
+                  LinkedIn
+                </a>
+
+                <a data-ga-label="View GoogleDocs" target="_blank" href="https://drive.google.com/open?id=1YVU2uyVL_4GCKZbdVTfSnzU1eJ3-4oE17-Cd-ArvKw4" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+                  <i class="fa fa-google md-14"></i>
+                  Google Docs
+                </a>
+              </p>
+
+              <p>Mon profil sur
+                <a data-ga-label="View GitHub" target="_blank" href="https://github.com/sylvaindethier"
+                  class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+                  <i class="fa fa-github md-14"></i>
+                  GitHub
+                </a>
               </p>
             </div>
             <div class="mdl-card__actions">
@@ -106,10 +121,10 @@
               <h4>Contact</h4>
 
               <div class="section__text">
-                <a data-ga-label="View LinkedIn" target="_blank" href="https://linkedin.com/in/sylvaindethier"
+                <a data-ga-label="Write email button" href="mailto:dethiersylvain@gmail.com"
                   class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-                  <i class="fa fa-linkedin md-14"></i>
-                  LinkedIn
+                  <i class="material-icons md-14">mail</i>
+                  Email
                 </a>
 
                 <a data-ga-label="View Twitter" target="_blank" href="https://twitter.com/sylvaindethier"
@@ -117,20 +132,7 @@
                   <i class="fa fa-twitter md-14"></i>
                   Twitter
                 </a>
-
-                <a data-ga-label="Write email button" href="mailto:dethiersylvain@gmail.com"
-                  class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-                  <i class="material-icons md-14">mail</i>
-                  Email
-                </a>
               </div>
-            </div>
-            <div class="mdl-card__actions">
-              <a data-ga-label="Write email action" href="mailto:dethiersylvain@gmail.com"
-                class="mdl-button mdl-color-text--blue">
-                <i class="material-icons md-14">mail</i>
-                Ou écrivez-moi.
-              </a>
             </div>
           </div>
         </section>
