fix: section__text

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
                 &nbsp; Actuellement occupé, non disponible.</span>
               </p>
               -->
-              <p>Voir mon CV sur
+              <div class="section__text">
+                Mon CV sur
                 <a data-ga-label="View LinkedIn" target="_blank" href="https://linkedin.com/in/sylvaindethier"
                   class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
                   <i class="fa fa-linkedin md-14"></i>
@@ -93,15 +94,16 @@
                   <i class="fa fa-google md-14"></i>
                   Google Docs
                 </a>
-              </p>
+              </div>
 
-              <p>Mon profil sur
+              <div class="section__text">
+                Mon profil sur
                 <a data-ga-label="View GitHub" target="_blank" href="https://github.com/sylvaindethier"
                   class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
                   <i class="fa fa-github md-14"></i>
                   GitHub
                 </a>
-              </p>
+              </div>
             </div>
             <div class="mdl-card__actions">
               <a href="documents/CV-Sylvain-Dethier.pdf" class="mdl-button mdl-color-text--blue">
