--- a/index.html
+++ b/index.html
@@ -83,26 +83,26 @@
               </p>
               -->
               <div class="section__text">
-                Mon CV sur
-                <a data-ga-label="View LinkedIn" target="_blank" href="https://linkedin.com/in/sylvaindethier"
-                  class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-                  <i class="fa fa-linkedin md-14"></i>
-                  LinkedIn
-                </a>
+                <p>Mon CV sur
+                  <a data-ga-label="View LinkedIn" target="_blank" href="https://linkedin.com/in/sylvaindethier"
+                    class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+                    <i class="fa fa-linkedin md-14"></i>
+                    LinkedIn
+                  </a>
 
-                <a data-ga-label="View GoogleDocs" target="_blank" href="https://drive.google.com/open?id=1YVU2uyVL_4GCKZbdVTfSnzU1eJ3-4oE17-Cd-ArvKw4" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-                  <i class="fa fa-google md-14"></i>
-                  Google Docs
-                </a>
-              </div>
+                  <a data-ga-label="View GoogleDocs" target="_blank" href="https://drive.google.com/open?id=1YVU2uyVL_4GCKZbdVTfSnzU1eJ3-4oE17-Cd-ArvKw4" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+                    <i class="fa fa-google md-14"></i>
+                    Google Docs
+                  </a>
+                </p>
 
-              <div class="section__text">
-                Mon profil sur
-                <a data-ga-label="View GitHub" target="_blank" href="https://github.com/sylvaindethier"
-                  class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-                  <i class="fa fa-github md-14"></i>
-                  GitHub
-                </a>
+                <p>Mes collaborations publiques sur
+                  <a data-ga-label="View GitHub" target="_blank" href="https://github.com/sylvaindethier"
+                    class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+                    <i class="fa fa-github md-14"></i>
+                    GitHub
+                  </a>
+                </p>
               </div>
             </div>
             <div class="mdl-card__actions">
