--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
                   <a data-ga-label="View GoogleDocs" target="_blank" href="https://drive.google.com/open?id=1YVU2uyVL_4GCKZbdVTfSnzU1eJ3-4oE17-Cd-ArvKw4" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
                     <i class="fa fa-google md-14"></i>
-                    Google Docs
+                    Google Docs (PDF, Word, etc)
                   </a>
                 </p>
 
