fix: default .loader CSS

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     .loader {
       position: relative;
       margin: 0 auto;
-      width: 50px;
+      width: 30px;
     }
     .loader:before {
       content: '';
@@ -93,7 +93,7 @@
   </head>
   <body>
     <div id="root">
-      <div class="loader">
+      <div class="loader" style="width:100px;margin-top:100px;">
         <svg class="circular" viewBox="25 25 50 50">
           <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
         </svg>
