remove outdated documents and download links

--- a/index.html
+++ b/index.html
@@ -81,11 +81,6 @@
                     <i class="fa fa-linkedin md-14"></i>
                     LinkedIn
                   </a>
-
-                  <a data-ga-label="View GoogleDocs" target="_blank" href="https://drive.google.com/open?id=1YVU2uyVL_4GCKZbdVTfSnzU1eJ3-4oE17-Cd-ArvKw4" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-                    <i class="fa fa-google md-14"></i>
-                    Google Docs (PDF, Word, etc)
-                  </a>
                 </p>
 
                 <p>Mes collaborations publiques sur
@@ -98,7 +93,7 @@
               </div>
             </div>
             <div class="mdl-card__actions">
-              <a href="documents/CV-Sylvain-Dethier.pdf" class="mdl-button mdl-color-text--blue">
+              <a href="#" class="mdl-button mdl-color-text--blue" style="text-decoration: line-through;">
                 <i class="material-icons md-14">file_download</i>
                 Téléchargez mon CV
                 <i class="material-icons md-14">picture_as_pdf</i>
