--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,29 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Use minimum-scale=1 to enable GPU rasterization -->
+    <meta name="viewport" content="width=device-width, initial-scale=1 minimum-scale=1">
+    <title>Sylvain Dethier - Web app developer</title>
+    <meta name="description" content="Développeur d'application web: JavaScript, NodeJS, ReactJS">
+    <meta name="keywords" content="développeur, web, full stack, JavaScript, NodeJS, ReactJS">
+
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="icon" sizes="192x192" href="%PUBLIC_URL%/icons/android-desktop.png">
+
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="JS Web Dev">
+    <link rel="apple-touch-icon-precomposed" href="%PUBLIC_URL%/icons/ios-desktop.png">
+
+    <!-- Tile icon for Win8 (144x144 + tile color) -->
+    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/icons/ms-touch-icon-precomposed.png">
+    <meta name="msapplication-TileColor" content="#2196F3">
+
+    <link rel="shortcut icon" href="%PUBLIC_URL%/icons/favicon.ico">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -13,101 +33,98 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-    <style type="text/css">
-    /* https://codepen.io/jczimm/pen/vEBpoL */
-    .loader {
-      position: relative;
-      margin: 0 auto;
-      width: 30px;
-    }
-    .loader:before {
-      content: '';
-      display: block;
-      padding-top: 100%;
-    }
-    .circular {
-      -webkit-animation: rotate 2s linear infinite;
-              animation: rotate 2s linear infinite;
-      height: 100%;
-      -webkit-transform-origin: center center;
-              transform-origin: center center;
-      width: 100%;
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      margin: auto;
-    }
-    .path {
-      stroke-dasharray: 1, 200;
-      stroke-dashoffset: 0;
-      stroke: #0057e7;
-      -webkit-animation: dash 1.5s ease-in-out infinite;
-              animation: dash 1.5s ease-in-out infinite;
-      stroke-linecap: round;
-    }
-    @-webkit-keyframes rotate {
-      100% {
-        -webkit-transform: rotate(360deg);
-                transform: rotate(360deg);
-      }
-    }
-
-    @keyframes rotate {
-      100% {
-        -webkit-transform: rotate(360deg);
-                transform: rotate(360deg);
-      }
-    }
-    @-webkit-keyframes dash {
-      0% {
-        stroke-dasharray: 1, 200;
-        stroke-dashoffset: 0;
-      }
-      50% {
-        stroke-dasharray: 89, 200;
-        stroke-dashoffset: -35px;
-      }
-      100% {
-        stroke-dasharray: 89, 200;
-        stroke-dashoffset: -124px;
-      }
-    }
-    @keyframes dash {
-      0% {
-        stroke-dasharray: 1, 200;
-        stroke-dashoffset: 0;
-      }
-      50% {
-        stroke-dasharray: 89, 200;
-        stroke-dashoffset: -35px;
-      }
-      100% {
-        stroke-dasharray: 89, 200;
-        stroke-dashoffset: -124px;
-      }
-    }
-    </style>
   </head>
   <body>
+    <!-- Display a message if JS has been disabled on the browser. -->
+    <!--
+    <noscript>If you're seeing this message, that means <strong>JavaScript has been disabled on your browser</strong>, please <strong>enable JavaScript</strong> to make this app work.</noscript>
+    -->
+    <noscript>Si vous voyez ce message, cela signifie que <strong>JavaScript a été désactivé sur votre navigateur</strong>, veuillez <strong>activer JavaScript</strong> pour que cette application fonctionne.</noscript>
+
     <div id="root">
-      <div class="loader" style="width:100px;margin-top:100px;">
+      <!-- Display a loader first. -->
+      <style type="text/css">
+      /* https://codepen.io/jczimm/pen/vEBpoL */
+      .loader {
+        position: relative;
+        margin: 0 auto;
+        margin-top: 100px;
+        width: 100px;
+      }
+      .loader:before {
+        content: '';
+        display: block;
+        padding-top: 100%;
+      }
+      .circular {
+        -webkit-animation: rotate 2s linear infinite;
+                animation: rotate 2s linear infinite;
+        height: 100%;
+        -webkit-transform-origin: center center;
+                transform-origin: center center;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+      }
+      .path {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+        stroke: #0057e7;
+        -webkit-animation: dash 1.5s ease-in-out infinite;
+                animation: dash 1.5s ease-in-out infinite;
+        stroke-linecap: round;
+      }
+      @-webkit-keyframes rotate {
+        100% {
+          -webkit-transform: rotate(360deg);
+                  transform: rotate(360deg);
+        }
+      }
+
+      @keyframes rotate {
+        100% {
+          -webkit-transform: rotate(360deg);
+                  transform: rotate(360deg);
+        }
+      }
+      @-webkit-keyframes dash {
+        0% {
+          stroke-dasharray: 1, 200;
+          stroke-dashoffset: 0;
+        }
+        50% {
+          stroke-dasharray: 89, 200;
+          stroke-dashoffset: -35px;
+        }
+        100% {
+          stroke-dasharray: 89, 200;
+          stroke-dashoffset: -124px;
+        }
+      }
+      @keyframes dash {
+        0% {
+          stroke-dasharray: 1, 200;
+          stroke-dashoffset: 0;
+        }
+        50% {
+          stroke-dasharray: 89, 200;
+          stroke-dashoffset: -35px;
+        }
+        100% {
+          stroke-dasharray: 89, 200;
+          stroke-dashoffset: -124px;
+        }
+      }
+      </style>
+      <div class="loader">
         <svg class="circular" viewBox="25 25 50 50">
           <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
         </svg>
       </div>
     </div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start`.
-      To create a production bundle, use `npm run build`.
-    -->
   </body>
 </html>
