--- a/public/index.html
+++ b/public/index.html
@@ -33,93 +33,92 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style type="text/css">
+    /* https://codepen.io/jczimm/pen/vEBpoL */
+    .loader {
+      position: relative;
+      margin: 0 auto;
+      margin-top: 100px;
+      width: 100px;
+    }
+    .loader:before {
+      content: '';
+      display: block;
+      padding-top: 100%;
+    }
+    .circular {
+      -webkit-animation: rotate 2s linear infinite;
+              animation: rotate 2s linear infinite;
+      height: 100%;
+      -webkit-transform-origin: center center;
+              transform-origin: center center;
+      width: 100%;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
+    }
+    .path {
+      stroke-dasharray: 1, 200;
+      stroke-dashoffset: 0;
+      stroke: #0057e7;
+      -webkit-animation: dash 1.5s ease-in-out infinite;
+              animation: dash 1.5s ease-in-out infinite;
+      stroke-linecap: round;
+    }
+    @-webkit-keyframes rotate {
+      100% {
+        -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
+      }
+    }
+
+    @keyframes rotate {
+      100% {
+        -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
+      }
+    }
+    @-webkit-keyframes dash {
+      0% {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+      }
+      50% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -35px;
+      }
+      100% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -124px;
+      }
+    }
+    @keyframes dash {
+      0% {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+      }
+      50% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -35px;
+      }
+      100% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -124px;
+      }
+    }
+    </style>
   </head>
   <body>
     <!-- Display a message if JS has been disabled on the browser. -->
-    <!--
     <noscript>If you're seeing this message, that means <strong>JavaScript has been disabled on your browser</strong>, please <strong>enable JavaScript</strong> to make this app work.</noscript>
-    -->
+    <br />
     <noscript>Si vous voyez ce message, cela signifie que <strong>JavaScript a été désactivé sur votre navigateur</strong>, veuillez <strong>activer JavaScript</strong> pour que cette application fonctionne.</noscript>
 
     <div id="root">
-      <!-- Display a loader first. -->
-      <style type="text/css">
-      /* https://codepen.io/jczimm/pen/vEBpoL */
-      .loader {
-        position: relative;
-        margin: 0 auto;
-        margin-top: 100px;
-        width: 100px;
-      }
-      .loader:before {
-        content: '';
-        display: block;
-        padding-top: 100%;
-      }
-      .circular {
-        -webkit-animation: rotate 2s linear infinite;
-                animation: rotate 2s linear infinite;
-        height: 100%;
-        -webkit-transform-origin: center center;
-                transform-origin: center center;
-        width: 100%;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
-      }
-      .path {
-        stroke-dasharray: 1, 200;
-        stroke-dashoffset: 0;
-        stroke: #0057e7;
-        -webkit-animation: dash 1.5s ease-in-out infinite;
-                animation: dash 1.5s ease-in-out infinite;
-        stroke-linecap: round;
-      }
-      @-webkit-keyframes rotate {
-        100% {
-          -webkit-transform: rotate(360deg);
-                  transform: rotate(360deg);
-        }
-      }
-
-      @keyframes rotate {
-        100% {
-          -webkit-transform: rotate(360deg);
-                  transform: rotate(360deg);
-        }
-      }
-      @-webkit-keyframes dash {
-        0% {
-          stroke-dasharray: 1, 200;
-          stroke-dashoffset: 0;
-        }
-        50% {
-          stroke-dasharray: 89, 200;
-          stroke-dashoffset: -35px;
-        }
-        100% {
-          stroke-dasharray: 89, 200;
-          stroke-dashoffset: -124px;
-        }
-      }
-      @keyframes dash {
-        0% {
-          stroke-dasharray: 1, 200;
-          stroke-dashoffset: 0;
-        }
-        50% {
-          stroke-dasharray: 89, 200;
-          stroke-dashoffset: -35px;
-        }
-        100% {
-          stroke-dasharray: 89, 200;
-          stroke-dashoffset: -124px;
-        }
-      }
-      </style>
+      <!-- Display loader first. -->
       <div class="loader">
         <svg class="circular" viewBox="25 25 50 50">
           <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
