--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Roboto from Google webfonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <style type="text/css">
+    html, body {
+      font-family: 'Roboto', sans-serif;
+    }
     /* https://codepen.io/jczimm/pen/vEBpoL */
     .loader {
       position: relative;
