--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Use minimum-scale=1 to enable GPU rasterization -->
-    <meta name="viewport" content="width=device-width, initial-scale=1 minimum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, shrink-to-fit=no">
     <title>Sylvain Dethier - Web app developer</title>
     <meta name="description" content="Développeur d'application web: JavaScript, NodeJS, ReactJS">
     <meta name="keywords" content="développeur, web, full stack, JavaScript, NodeJS, ReactJS">
