--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <meta name="msapplication-TileImage" content="%PUBLIC_URL%/icons/ms-touch-icon-precomposed.png">
     <meta name="msapplication-TileColor" content="#2196F3">
 
-    <link rel="shortcut icon" href="%PUBLIC_URL%/icons/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/icons/favicon.png">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
