--- a/index.html
+++ b/index.html
@@ -1,170 +1,1 @@
-<!doctype html>
-<!--[if lt IE 7]>      <html lang="fr" class="lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="fr" class="lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="fr" class="lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="fr"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta http-equiv="X-Frame-Options" content="deny">
-  <title>Développeur Web, NodeJS, JavaScript, ReactJS, PHP, Symfony</title>
-  <meta name="description" content="Développeur Web sur Paris (France), NodeJS, JavaScript, ReactJS, PHP, Symfony">
-  <meta name="keywords" content="développeur web, développeur web full stack, développeur web NodeJS, développeur web ReactJS, développeur web JavaScript, développeur web php symfony">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Add to homescreen for Chrome on Android -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <link rel="icon" sizes="192x192" href="images/android-desktop.png">
-
-  <!-- Add to homescreen for Safari on iOS -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Développeur Web, NodeJS, JavaScript, ReactJS, PHP, Symfony">
-  <link rel="apple-touch-icon-precomposed" href="images/ios-desktop.png">
-
-  <!-- Tile icon for Win8 (144x144 + tile color) -->
-  <meta name="msapplication-TileImage" content="images/ms-touch-icon-precomposed.png">
-  <meta name="msapplication-TileColor" content="#2196F3">
-
-  <link rel="shortcut icon" href="images/favicon.png">
-
-  <!-- Material Design Lite 1.1.3 CDN -->
-  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-  <!-- Font Awesome CDN -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-  <!-- Fixed-Header -->
-  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <header class="mdl-layout__header">
-      <div class="mdl-layout__header-row">
-        <h2 class="mdl-layout-title">Sylvain Dethier</h2>
-        <!-- Add spacer, to align navigation to the right -->
-        <div class="mdl-layout-spacer"></div>
-        <!-- Navigation. We hide it in small screens. -->
-        <nav class="mdl-navigation mdl-layout--large-screen-only">
-          <a class="mdl-navigation__link" href="#resume">CV</a>
-          <a class="mdl-navigation__link" href="#contact">Contact</a>
-          <!--
-          <a class="mdl-navigation__link" href="index-en.html" lang="en">
-            <i class="material-icons md-light md-14">language</i> EN
-          </a>
-          -->
-        </nav>
-      </div>
-      <div class="mdl-layout__header-row">
-        <h1 class="mdl-layout-title">Développeur Web, NodeJS, JavaScript, ReatcJS, PHP, Symfony</h1>
-      </div>
-    </header>
-    <main class="mdl-layout__content">
-      <div class="page-content">
-        <!--[if lt IE 8]>
-          <p class="browserupgrade">
-            Vous utilisez un navigateur <strong>obsolète</strong>.
-            Veuillez <a target="_blank" href="http://browsehappy.com/">mettre à jour votre navigateur</a>
-            pour améliorer votre expérience.
-          </p>
-        <![endif]-->
-
-        <section id="resume" class="mdl-grid mdl-grid--no-spacing section--center">
-          <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col">
-            <div class="mdl-card__supporting-text">
-              <h4>CV</h4>
-              <div class="section__text">
-                <p>Mon CV sur
-                  <a data-ga-label="View LinkedIn" target="_blank" href="https://linkedin.com/in/sylvaindethier"
-                    class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-                    <i class="fa fa-linkedin md-14"></i>
-                    LinkedIn
-                  </a>
-                </p>
-
-                <p>Mes collaborations publiques sur
-                  <a data-ga-label="View GitHub" target="_blank" href="https://github.com/sylvaindethier"
-                    class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-                    <i class="fa fa-github md-14"></i>
-                    GitHub
-                  </a>
-                </p>
-              </div>
-            </div>
-            <div class="mdl-card__actions">
-              <a href="#" class="mdl-button mdl-color-text--blue" style="text-decoration: line-through;">
-                <i class="material-icons md-14">file_download</i>
-                Téléchargez mon CV
-                <i class="material-icons md-14">picture_as_pdf</i>
-                (PDF - 2016/09).
-              </a>
-            </div>
-          </div>
-        </section>
-        <!-- /Resume section -->
-
-        <section id="contact" class="mdl-grid mdl-grid--no-spacing section--center">
-          <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col">
-            <div class="mdl-card__supporting-text">
-              <h4>Contact</h4>
-
-              <div class="section__text">
-                <a data-ga-label="Write email button" href="mailto:dethiersylvain@gmail.com"
-                  class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-                  <i class="material-icons md-14">mail</i>
-                  Email
-                </a>
-
-                <a data-ga-label="View Twitter" target="_blank" href="https://twitter.com/sylvaindethier"
-                  class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-                  <i class="fa fa-twitter md-14"></i>
-                  Twitter
-                </a>
-              </div>
-            </div>
-          </div>
-        </section>
-        <!-- /Contact section -->
-
-        <footer class="mdl-mini-footer">
-          <div class="mdl-mini-footer__left-section">
-            <div class="mdl-logo"><i class="material-icons md-14">copyright</i>
-              Sylvain Dethier. Propulsé avec <i class="fa fa-heart"></i> par:
-            </div>
-            <ul class="mdl-mini-footer__link-list">
-              <li><a href="http://pages.github.com/">Github Pages <i class="fa fa-github"></i></a></li>
-              <li><a href="http://getmdl.io/">Material Design Lite <i class="fa fa-html5"></i> <i class="fa fa-css3"></i></a></li>
-              <li><a href="http://fortawesome.github.io/Font-Awesome/">FontAwesome <i class="fa fa-flag"></i></a></li>
-            </ul>
-          </div>
-          <div class="mdl-mini-footer__right-section"></div>
-        </footer>
-        <!-- /Footer -->
-
-      </div>
-    </main>
-
-  </div>
-  <!-- /Fixed-Header -->
-
-
-  <!-- Material Design Lite 1.1.3 CDN -->
-  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-  <!-- Google Analytics -->
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||
-  function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();
-  a=s.createElement(o),m=s.getElementsByTagName(o)[0];
-  a.async=1;a.src=g;m.parentNode.insertBefore(a,m);})
-  (window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create','UA-48020170-2','auto');ga('require','displayfeatures');ga('send','pageview');
-  /* track click events on data-ga-label elements */
-  Array.apply(null, document.querySelectorAll('[data-ga-label]')).forEach( function(el) {
-    el.addEventListener('click', function () {
-      ga('send', 'event', 'link', 'click', el.getAttribute('data-ga-label'));
-    })
-  });
-  </script>
-</body>
-</html>
+<!DOCTYPE html><html lang="fr"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,shrink-to-fit=no"><title>Sylvain Dethier - Web app developer</title><meta name="description" content="Développeur d'application web: JavaScript, NodeJS, ReactJS"><meta name="keywords" content="développeur, web, full stack, JavaScript, NodeJS, ReactJS"><meta name="mobile-web-app-capable" content="yes"><link rel="icon" sizes="192x192" href="/icons/android-desktop.png"><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-status-bar-style" content="black"><meta name="apple-mobile-web-app-title" content="JS Web Dev"><link rel="apple-touch-icon-precomposed" href="/icons/ios-desktop.png"><meta name="msapplication-TileImage" content="/icons/ms-touch-icon-precomposed.png"><meta name="msapplication-TileColor" content="#2196F3"><link rel="shortcut icon" href="/icons/favicon.png"><link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet"><style>body,html{font-family:Roboto,sans-serif}.loader{position:relative;margin:0 auto;margin-top:100px;width:100px}.loader:before{content:'';display:block;padding-top:100%}.circular{-webkit-animation:rotate 2s linear infinite;animation:rotate 2s linear infinite;height:100%;-webkit-transform-origin:center center;transform-origin:center center;width:100%;position:absolute;top:0;bottom:0;left:0;right:0;margin:auto}.path{stroke-dasharray:1,200;stroke-dashoffset:0;stroke:#0057e7;-webkit-animation:dash 1.5s ease-in-out infinite;animation:dash 1.5s ease-in-out infinite;stroke-linecap:round}@-webkit-keyframes rotate{100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes rotate{100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@-webkit-keyframes dash{0%{stroke-dasharray:1,200;stroke-dashoffset:0}50%{stroke-dasharray:89,200;stroke-dashoffset:-35px}100%{stroke-dasharray:89,200;stroke-dashoffset:-124px}}@keyframes dash{0%{stroke-dasharray:1,200;stroke-dashoffset:0}50%{stroke-dasharray:89,200;stroke-dashoffset:-35px}100%{stroke-dasharray:89,200;stroke-dashoffset:-124px}}</style><link href="/static/css/app.662cfa90.css" rel="stylesheet"></head><body><noscript>If you're seeing this message, that means <strong>JavaScript has been disabled on your browser</strong>, please <strong>enable JavaScript</strong> to make this app work.</noscript><noscript>Si vous voyez ce message, cela signifie que <strong>JavaScript a été désactivé sur votre navigateur</strong>, veuillez <strong>activer JavaScript</strong> pour que cette application fonctionne.</noscript><div id="root"><div class="loader"><svg class="circular" viewBox="25 25 50 50"><circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/></svg></div></div><script type="text/javascript" src="/static/js/vendor.fe00cbc6.js"></script><script type="text/javascript" src="/static/js/app.0fecfe79.js"></script></body></html>
