--- a/public/index.html
+++ b/public/index.html
@@ -161,5 +161,17 @@
         </svg>
       </div>
     </div>
+    <!-- // Google Analytics setup -->
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-48020170-2', 'auto');
+    ga('require', 'displayfeatures');
+    ga('send', 'pageview');
+    /* track click events on data-ga-label elements */
+    var attr='data-ga-label';Array.apply(null, document.querySelectorAll('['+attr+']')).forEach(function(el){el.addEventListener('click', function(){
+      ga('send', 'event', 'link', 'click', el.getAttribute(attr));
+    })});
+    </script>
+
   </body>
 </html>
